--- a/01-txt/电子书.md
+++ b/01-txt/电子书.md
@@ -1,7 +1,25 @@
 ## 电子书资源
 > 格式：mobi、epub、pdf等
 
-### 1、知识星球
+### 1、社群类
+- 知识星球
+![](https://github.com/guoshijie/UseFulTools/blob/main/01-txt/img/%E7%9F%A5%E8%AF%86%E6%98%9F%E7%90%83.png)
+
+- 微信群
+![]()
+
+- QQ群
 
 ### 2、电子书下载
+- [书栈网](https://www.bookstack.cn/)
+- [点书网](http://www.gezhongshu.com/forum.php)
+- [我爱书籍](http://www.52book.me/)
+- [iamtxt.com](https://www.iamtxt.com/)
+- [书格](https://new.shuge.org/)
+- [nmod](https://www.nmod.net/)
+
+### 3、搜索引擎
+- [鸠摩搜索-文档搜索引擎](https://www.jiumodiary.com/)
+
+
 
