--- a/01-txt/电子书.md
+++ b/01-txt/电子书.md
@@ -1,6 +1,11 @@
 ## 电子书资源
 > 格式：mobi、epub、pdf等
 
+- [电子书资源](#电子书资源)
+  - [1、社群类](#1社群类)
+  - [2、电子书下载](#2电子书下载)
+  - [3、搜索引擎](#3搜索引擎)
+
 ### 1、社群类
 - 知识星球
 
